--- a/src/main/resources/static/widget/svg.html
+++ b/src/main/resources/static/widget/svg.html
@@ -1,191 +1,4 @@
-<!doctype html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <title>DGIST - 문제은행</title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Forum - Responsive HTML5 Template">
-    <meta name="author" content="Forum">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" th:href="@{/favicon/favicon.ico}">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-</head>
-<body>
-<!-- tt-mobile menu -->
-<nav class="panel-menu" id="mobile-menu">
-    <ul>
-
-    </ul>
-    <div class="mm-navbtn-names">
-        <div class="mm-closebtn">
-            Close
-            <div class="tt-icon">
-                <svg>
-                  <use xlink:href="#icon-cancel"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="mm-backbtn">Back</div>
-    </div>
-</nav>
-<header id="tt-header">
-    <div class="container">
-        <div class="row tt-row no-gutters">
-            <div class="col-auto">
-                <!-- toggle mobile menu -->
-                <a class="toggle-mobile-menu" >
-                    <svg class="tt-icon">
-                      <use xlink:href="#icon-menu_icon"></use>
-                    </svg>
-                </a>
-                <!-- /toggle mobile menu -->
-                <!-- logo -->
-                <div class="tt-logo">
-                    <a href="../index.html"><img src="../images/logo.png" alt=""></a>
-                </div>
-                <!-- /logo -->
-                <!-- desctop menu -->
-                  <div class="tt-desktop-menu">
-                    <nav>
-                        <ul>
-                            <li><a href="/pg/submit"><span>등록</span></a></li>
-                            <li><a href="/pg/getList"><span>목록</span></a></li>
-                            <li><a href="/pg/myAnswer"><span>내 답변</span></a></li>
-                            <li><a href="/pg/help"><span>이용방법</span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div class="col-auto ml-auto">
-               <div class="tt-user-info d-flex justify-content-center">
-                  <a class="tt-btn-icon"> 로그아웃 </a>
-              </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<main id="tt-pageContent" class="tt-offset-small">
-    <div class="container">
-        <div class="tt-tab-wrapper" style="cursor:pointer;">
-            <div class="tt-wrapper-inner">
-                <ul class="nav nav-tabs pt-tabs-default" role="tablist">
-                    <li class="nav-item show">
-                        <a class="nav-link active" data-toggle="tab" href="#tt-tab-01" role="tab"><span>전체</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#tt-tab-03" role="tab"><span>답변완료</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#tt-tab-02" role="tab"><span>답변대기중</span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="tab-content">
-                <div class="tab-pane tt-indent-none  show active" id="tt-tab-01" role="tabpanel">
-                   <div class="tt-topic-list">
-                        <div class="tt-item" onclick="location.href='/pg/detail'">
-                            <div class="tt-col-avatar">
-                                <svg class="tt-icon">
-                                  <use xlink:href="#icon-ava-q"></use>
-                                </svg>
-                            </div>
-                            <div class="tt-col-description">
-                                <h6 class="tt-title"><a >
-                                    <svg class="tt-icon">
-                                      <use xlink:href="#icon-locked"></use>
-                                    </svg>
-                                  애국가 4절은 무엇인가요?
-                                </a></h6>
-                                <div class="row align-items-center no-gutters hide-desktope">
-                                    <div class="col-9">
-                                        <ul class="tt-list-badge">
-                                            <li class="show-mobile"><a ><span class="tt-color05 tt-badge">music</span></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-3 ml-auto show-mobile">
-                                       <div class="tt-value">5 Jan,19</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tt-col-category tt-col-value-large hide-mobile"><span class="tt-color07 tt-badge">답변완료</span></div>
-                            <div class="tt-col-category tt-col-value-large hide-mobile"><span class="tt-color07 tt-badge">후기등록</span></div>
-                            <div class="tt-col-value-large hide-mobile">5 Jan,19</div>
-                        </div>
-
-                        <div class="tt-item" onclick="location.href='/pg/detail'">
-                            <div class="tt-col-avatar">
-                                <svg class="tt-icon">
-                                  <use xlink:href="#icon-ava-q"></use>
-                                </svg>
-                            </div>
-                            <div class="tt-col-description">
-                                <h6 class="tt-title"><a >
-                                    <svg class="tt-icon">
-                                      <use xlink:href="#icon-locked"></use>
-                                    </svg>
-                                  기울기를 구하는방법 ?
-                                </a></h6>
-                                <div class="row align-items-center no-gutters hide-desktope">
-                                    <div class="col-9">
-                                        <ul class="tt-list-badge">
-                                            <li class="show-mobile"><a ><span class="tt-color04 tt-badge">답변대기</span></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-3 ml-auto show-mobile">
-                                       <div class="tt-value">5 Jan,19</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tt-col-category tt-col-value-large hide-mobile"><span class="tt-color04 tt-badge">답변대기</span></div>
-                            <div class="tt-col-category tt-col-value-large hide-mobile"></div>
-                            <div class="tt-col-value-large hide-mobile">5 Jan,19</div>
-                        </div>
-
-                         <div class="tt-item" onclick="location.href='/pg/detail'">
-                             <div class="tt-col-avatar">
-                                 <svg class="tt-icon">
-                                   <use xlink:href="#icon-ava-q"></use>
-                                 </svg>
-                             </div>
-                             <div class="tt-col-description">
-                                 <h6 class="tt-title"><a>
-                                     <svg class="tt-icon">
-                                       <use xlink:href="#icon-locked"></use>
-                                     </svg>
-                                   애국가 4절은 무엇인가요?
-                                 </a></h6>
-                                 <div class="row align-items-center no-gutters hide-desktope">
-                                     <div class="col-9">
-                                         <ul class="tt-list-badge">
-                                             <li class="show-mobile"><a ><span class="tt-color05 tt-badge">music</span></a></li>
-                                         </ul>
-                                     </div>
-                                     <div class="col-3 ml-auto show-mobile">
-                                        <div class="tt-value">5 Jan,19</div>
-                                     </div>
-                                 </div>
-                             </div>
-                             <div class="tt-col-category tt-col-value-large hide-mobile"><span class="tt-color07 tt-badge">답변완료</span></div>
-                             <div class="tt-col-category tt-col-value-large hide-mobile"></div>
-                             <div class="tt-col-value-large hide-mobile">5 Jan,19</div>
-                         </div>
-
-                        <div class="tt-row-btn">
-                            <button type="button" class="btn-icon js-topiclist-showmore">
-                                <svg class="tt-icon">
-                                  <use xlink:href="#icon-load_lore_icon"></use>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-<script src="../js/bundle.js"></script><svg width="0" height="0" class="hidden">
+<svg width="0" height="0" class="hidden">
   <symbol aria-hidden="true" data-prefix="fab" data-icon="facebook-f" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512" id="facebook-f-brands">
      <path fill="currentColor" d="M215.8 85H264V3.6C255.7 2.5 227.1 0 193.8 0 124.3 0 76.7 42.4 76.7 120.3V192H0v91h76.7v229h94V283h73.6l11.7-91h-85.3v-62.7c0-26.3 7.3-44.3 45.1-44.3z"></path>
   </symbol>
@@ -605,5 +418,3 @@
      <path d="M56 24.33c-11.97 0-21.67 9.7-21.67 21.67S44.03 67.67 56 67.67c11.97 0 21.67-9.7 21.67-21.67S67.97 24.33 56 24.33zm-2.13 28.8c-1.94 1.03-3.54.07-3.54-2.13V41c0-2.2 1.59-3.16 3.54-2.13l9.93 5.26c1.94 1.03 1.94 2.71 0 3.74l-9.93 5.26z" fill="#b9c2c6"></path>
   </symbol>
   </svg>
-</body>
-</html>
